...
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button {
                    isAddingTargetPerson = true
                } label: {
                    Label("対象者を追加", systemImage: "plus")
                }
            }
        }
        .sheet(isPresented: $isAddingTargetPerson) {
            NameInputSheet(title: "対象者の登録", placeholder: "対象者名") { name in
                let targetPerson = TargetPerson(name: name)
                modelContext.insert(targetPerson)
                targetPerson.assessor = assessor
            }
        }
        .sheet(item: $editingTargetPerson) { targetPerson in
...
